# rust_base_proj

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: general.yml  scheduled-audit.yml
configuration/: base.yaml  production.yaml
migrations/: 20220928003440_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/login/: login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
