[package]
name = "base_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.1", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
config = "0.13.2"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.22"
env_logger = "0.9.0"
log = "0.4.17"

[dev-dependencies]
reqwest = "0.11.11"
