[package]
name = "base_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "rt"] }
sqlx = { version = "0.6.1", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
config = "0.13.2"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.22"
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"
once_cell = "1.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.0"
serde-aux = "4.0.0"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
# We need the `json` feature flag to serialize/deserialize JSON payloadsma
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[dev-dependencies]
# Cant use faker 2.4 or higher because of conflict with rand 0.8 used in quickcheck
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = "0.11.11"
tokio-test = "0.4.2"
wiremock = "0.5"
